finalised send/receive architecture

--- a/send.html
+++ b/send.html
@@ -10,18 +10,27 @@
 
 <body>
 
-    <div id='heading'>
-        
+    <div id='heading' class='center'>
+        send a hug!
     </div>
-    
+
     <form>
         <div class='control-wrapper'>
-        <label>Your name:</label> <input id='sender-input'>
+            <label>Your name:</label> <input id='sender-input'>
         </div>
         <div class='control-wrapper'>
             <label>Their name:</label> <input id='recipient-input'>
         </div>
+        <div class='control-wrapper'>
+            <label>a message (140 chars, optional):</label> <input id='message'>
+        </div>
+
+        <div class='control-wrapper'>
+            <button id='generate-btn'>Generate link</button>
+        </div>
     </form>
+
+    <script src='send.js'> </script>
 </body>
 
 </html>
