finalised animation code and added replay/share buttons

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 <body>
     <script src='main.js'></script>
+    <script src='AssetManager.js'></script>
     <div id='heading'>Dear <span id='recipient-name'>Recipient</span>,</div>
-    <div class='text'><span id='sender-name'>Someone</span> thought that you could use a hug. Here it is! :)</div>
+    <div class='text'><span id='sender-name'>Someone</span> thought that you could use a hug. Here it is! :)<button id='replay-btn'>Replay</button> </div>
     <div id='content'>
         <canvas id='canvas'></canvas>
     </div>
@@ -19,8 +20,10 @@
         <div class='text'>
             they also wanted you to know:
         </div>
-        <div class='quote text' id='message'>Hey, hope you're doing well!</div>
+        <div class='quote text' id='message'> </div>
     </section>
+
+    <div class='text center'> <a href='send.html'>Send them a hug back!</a></div>
 
     <div id='legalese'>
         <div> © 2020 siddharth s singh. source code on <a href='https://github.com/shantaram3013/hugs'
