added gitignore and final art assets

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <script src='main.js'></script>
     <script src='AssetManager.js'></script>
     <div id='heading'>Dear <span id='recipient-name'>Recipient</span>,</div>
-    <div class='text'><span id='sender-name'>Someone</span> thought that you could use a hug. Here it is! :)<button id='replay-btn'>Replay</button> </div>
+    <div class='text'><span id='sender-name'>Someone</span> thought that you could use a hug. Here it is! :)<button
+            id='replay-btn'>Replay</button> </div>
     <div id='content'>
         <canvas id='canvas'></canvas>
     </div>
@@ -27,7 +28,8 @@
 
     <div id='legalese'>
         <div> © 2020 siddharth s singh. source code on <a href='https://github.com/shantaram3013/hugs'
-                target="_blank">Github</a></div>
+                target="_blank">Github</a>. Art by <a href='https://www.instagram.com/kindly_alligator/'>kindly_alligator</a>
+        </div>
     </div>
 </body>
 
