added optional indicator to html, stripped + sign

--- a/send.html
+++ b/send.html
@@ -16,7 +16,7 @@
 
     <form>
         <div class='control-wrapper'>
-            <label>Your name:</label> <input id='sender-input'>
+            <label>Your name (optional):</label> <input id='sender-input'>
         </div>
         <div class='control-wrapper'>
             <label>Their name:</label> <input id='recipient-input'>
