reworked styling and DOM arrangement a little

--- a/send.html
+++ b/send.html
@@ -14,15 +14,19 @@
         send a hug!
     </div>
 
+    <div class='text small-text'>
+        (message and name optional)
+    </div>
+
     <form>
         <div class='control-wrapper'>
-            <label>Your name (optional):</label> <input id='sender-input'>
+            <label>Your name:</label> <input id='sender-input'>
         </div>
         <div class='control-wrapper'>
             <label>Their name:</label> <input id='recipient-input'>
         </div>
         <div class='control-wrapper'>
-            <label>a message (140 chars, optional):</label> <input id='message'>
+            <label>a message:</label> <input id='message'>
         </div>
 
         <div class='control-wrapper'>
