--- a/send.html
+++ b/send.html
@@ -18,7 +18,7 @@
         (message and name optional)
     </div>
 
-    <form>
+    <form autocomplete="off">
         <div class='control-wrapper'>
             <label>Your name:</label> <input id='sender-input'>
         </div>
