added link to my website lol

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <div class='text center'> <a href='send.html'>Send them a hug back!</a></div>
 
     <div id='legalese'>
-        <div> © 2020 siddharth s singh. source code on <a href='https://github.com/shantaram3013/hugs'
-                target="_blank">Github</a>. Art by <a href='https://www.instagram.com/kindly_alligator/'>kindly_alligator</a>
+        <div> © 2020 siddharth s singh.</a> check out my <a href='https://shantaram.xyz'>other stuff</a>. source code for this website is on <a href='https://github.com/shantaram3013/hugs'
+                target="_blank">Github</a>. Art and animation by <a href='https://www.instagram.com/kindly_alligator/'>kindly_alligator</a>
         </div>
     </div>
 </body>
