add loading screen, noscript info

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 <body>
     <script src='main.js'></script>
     <script src='AssetManager.js'></script>
+    <div id='mask'>
+        <div id='mask-text'>loading...
+        </div>
+        <noscript>You'll need JavaScript enabled to view this hug.</noscript>
+    </div>
     <div id='heading'>Dear <span id='recipient-name'>Recipient</span>,</div>
     <div class='text'><span id='sender-name'>Someone</span> thought that you could use a hug. Here it is! :)<button
             id='replay-btn'>Replay</button> </div>
