Finally fix encoding/emoji, hopefully for the last time

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/js-base64@2.5.2/base64.min.js"></script>
     <script src='main.js'></script>
     <script src='AssetManager.js'></script>
     <div id='mask'>
