--- a/send.html
+++ b/send.html
@@ -34,6 +34,7 @@
         </div>
     </form>
 
+    <script src="https://cdn.jsdelivr.net/npm/js-base64@2.5.2/base64.min.js"></script>
     <script src='send.js'> </script>
 </body>
 
