update stylesheet version to force overwrite cached versions

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>you've got hugs!</title>
-    <link rel='stylesheet' href='style.css'>
+    <link rel='stylesheet' href='style.css?v=1.1'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <meta charset="UTF-8">
 </head>
