add analytics link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <noscript>You'll need JavaScript enabled to view this hug.</noscript>
     </div>
     <div id='heading'>Dear <span id='recipient-name'>Recipient</span>,</div>
-    <div class='text'><span id='sender-name'>Someone</span> thought that you could use a hug. Here it is! :)<button id='replay-btn'>Replay</button> </div>
+    <div class='text'><span id='sender-name'>Someone</span> thought that you could use a hug. Here it is! :)<button
+            id='replay-btn'>Replay</button> </div>
     <div id='content'>
         <canvas id='canvas'></canvas>
     </div>
@@ -32,9 +33,13 @@
     <div class='text center'> <a href='send.html'>Send them a hug back!</a></div>
 
     <div id='legalese'>
-        <div> © 2020 siddharth s singh.</a> check out my <a href='https://shantaram.xyz'>other stuff</a>. source code for this website is on <a href='https://github.com/shantaram3013/hugs' target="_blank">Github</a>. Art and animation by <a href='https://www.instagram.com/kindly_alligator/'>kindly_alligator</a>
+        <div> © 2020 siddharth s singh.</a> check out my <a href='https://shantaram.xyz'>other stuff</a>. source code
+            for this website is on <a href='https://github.com/shantaram3013/hugs' target="_blank">Github</a>. Art and
+            animation by <a href='https://www.instagram.com/kindly_alligator/'>kindly_alligator</a>
         </div>
     </div>
+
+    <img style='display: none;' src="https://analytics.shantaram.xyz/count?p=/hugs">
 </body>
 
 </html>
