--- a/send.html
+++ b/send.html
@@ -36,6 +36,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/js-base64@2.5.2/base64.min.js"></script>
     <script src='send.js'> </script>
+
+    <img style='display: none;' src="https://analytics.shantaram.xyz/count?p=/hugs/send.html">
 </body>
 
 </html>
